fix swiper slide content alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,13 +41,15 @@ swiper-container {
   width: 100%;
   height: 100%;
   padding: 30px;
-  //   border: 1px solid red !important;
 }
 
 swiper-slide {
   height: 350px !important;
-  //   border: 1px solid yellow !important;
   transform: translateY(15%);
+
+  .info-container .content {
+    opacity: 0;
+  }
 }
 
 swiper-slide.swiper-slide-next {
@@ -55,10 +57,28 @@ swiper-slide.swiper-slide-next {
   transform: translateY(0);
   z-index: 3;
 
-  div {
+  .info-container {
     position: relative !important;
     width: 700px !important;
     z-index: 5 !important;
     left: -152px !important;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgb(12 15 25 / 45%);
+      z-index: 1;
+    }
+
+    .content {
+      opacity: 1;
+      position: relative;
+      z-index: 2;
+      bottom: 45px;
+    }
   }
 }
